--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   </header> 
 
   <section class="about" id="about">  
-    <div class="aboutme"><h3>title</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perspiciatis, pariatur molestias rerum voluptate laudantium reprehenderit deserunt voluptas reiciendis et repudiandae fugiat ipsum ea iusto omnis, soluta, ex aspernatur. Reprehenderit.</p></div>
-    <div class="aboutme"><h3>title</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perspiciatis, pariatur molestias rerum voluptate laudantium reprehenderit deserunt voluptas reiciendis et repudiandae fugiat ipsum ea iusto omnis, soluta, ex aspernatur. Reprehenderit.</p></div>
-    <div class="aboutme"><h3>title</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perspiciatis, pariatur molestias rerum voluptate laudantium reprehenderit deserunt voluptas reiciendis et repudiandae fugiat ipsum ea iusto omnis, soluta, ex aspernatur. Reprehenderit.</p></div>
+    <div class="aboutme"><h3>Sobre mim</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perspiciatis, pariatur molestias rerum voluptate laudantium reprehenderit deserunt voluptas reiciendis et repudiandae fugiat ipsum ea iusto omnis, soluta, ex aspernatur. Reprehenderit.</p></div>
+    <div class="aboutme"><h3>Educação</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perspiciatis, pariatur molestias rerum voluptate laudantium reprehenderit deserunt voluptas reiciendis et repudiandae fugiat ipsum ea iusto omnis, soluta, ex aspernatur. Reprehenderit.</p></div>
+    <div class="aboutme"><h3>Vida Profissional</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perspiciatis, pariatur molestias rerum voluptate laudantium reprehenderit deserunt voluptas reiciendis et repudiandae fugiat ipsum ea iusto omnis, soluta, ex aspernatur. Reprehenderit.</p></div>
   </section>
 
   <section class="skills" id="skills">
